Added - Missiles to most consumable item drop pools
Added - Relic components will now drop from all automated ships that were destroyed (even modded)
Added - Relic component configuration for RAT Abyss, KOL boss factions
Adjusted - Relic components no longer drop from battles with the luddic path
Adjusted - Removed most VPCs from Historian pool
Adjusted - Conflict/Exploration Package VPCs moved from Historian T4 to Historian T3
Adjusted - Drastically reduced drop rates for special items, again (now matches vanilla in my low-mod playthough)
Adjusted - Drive bubble spike now fires when a fleet is in range regardless of hostility
Adjusted - Drive bubble  Spike drop rate halved everywhere
Adjusted - Restoration Nanite drop rate increased

Hullmods
Added - Hellpods. They do what you'd expect them to do: getting your marines killed.
Added - Hand Built now has a proper icon and no longer reuses the printing one
Adjusted - Renamed Hand Built to Forge World Experiment

Skills
Added - NPC Administrator skill "Micromanagement": Allows for remote management of items and AI cores after 3 months in office (NOT a player skill)

Detachments
Adjusted - Markedly improved orbiting behaviour as a side effect of the smoke missiles
Fixed - No longer crashes when told to hide in non-nebula systems without a star

Research Projects
Added - Project Prospector: trade survey data for hyperspace topography progress (unlocks after you gathered some hyperspace data)
Added - Project Sonic: trade in a metric ton of fuel for a niche, but extremely useful hullmod (unlocks if you use slow ships)
Added - Project Pulse: Pyrophage made the autopulse laser cool. I needed an excuse to put it into the game, so here it is. (unlocks if you fit an autopulse on a ship)
Added - Project Mjölnir: trade relic components for missiles, always unlocked
Added - Some sounds to the project UI
Adjusted - Show Inputs button is now Show Info and displays a description of what the project actually does (in most cases)