@@ -22,13 +22,13 @@ Explore without fear of coming home to empty stores!",97
 ,,,,,,,,,,,,,,,
 Base Ambassador Item,IndEvo_amb,"IndEvo_amb, no_drop",,,1000,1,1,,graphics/icons/cargo/space_suit.png,ui_cargo_crew,ui_cargo_crew_drop,indevo.items.AmbassadorItemPlugin,,,800
 ,,,,,,,,,,,,,,,
-Forge Template,IndEvo_ForgeTemplate_1,,,,50000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
-Forge Template,IndEvo_ForgeTemplate_2,,,,50000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
-Forge Template,IndEvo_ForgeTemplate_3,,,,50000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
-Forge Template,IndEvo_ForgeTemplate_4,,,,50000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
-Forge Template,IndEvo_ForgeTemplate_5,,,,50000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
-Degraded Forge Template,IndEvo_DegForgeTemplate,IndEvo_FT,,,50000,1000,1,,graphics/icons/cargo/forge_template_broken.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",94
-Empty Forge Template,IndEvo_EmptForgeTemplate,IndEvo_FT,,0.5,100000,1000,1,,graphics/icons/cargo/forge_template_empty.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",93
+Forge Template,IndEvo_ForgeTemplate_1,,,,20000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
+Forge Template,IndEvo_ForgeTemplate_2,,,,20000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
+Forge Template,IndEvo_ForgeTemplate_3,,,,20000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
+Forge Template,IndEvo_ForgeTemplate_4,,,,20000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.ForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
+Forge Template,IndEvo_ForgeTemplate_5,,,,20000,1,1,,graphics/icons/cargo/forge_template_shiphulll.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",95
+Degraded Forge Template,IndEvo_DegForgeTemplate,IndEvo_FT,,,15000,1000,1,,graphics/icons/cargo/forge_template_broken.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",94
+Empty Forge Template,IndEvo_EmptForgeTemplate,IndEvo_FT,,0.5,25000,1000,1,,graphics/icons/cargo/forge_template_empty.png,ui_chip_pickup,ui_ship_bp_drop,indevo.items.EmptyForgeTemplateItemPlugin,,"This experimental piece of tech looks a lot like a blueprint, but doesn't seem to work like one.",93
 ,,,,,,,,,,,,,,,
 #Pets,,,,,,,,,,,,,,,
 Cryochamber,IndEvo_PetBox,IndEvo_PetBox,,,1,1000,1,,graphics/icons/cargo/cryobox.png,ui_cargo_special_biotech_pickup,ui_cargo_special_tech_drop,indevo.industries.petshop.item.PetItemPlugin,,"A cryochamber holding a specimen of a pet of any kind. Chambers like these are ubiquitous in the sector and come in many different types sizes, some having been ripped from cryosleepers, others being repurposed bulk food containers. They are extremely robust and reusable, with many dating back a century or more.",98
