@@ -1,0 +1,10 @@
+package indevo.items.consumables.fleet;
+
+import com.fs.starfarer.api.impl.campaign.abilities.ai.BaseAbilityAI;
+
+public class ExplosiveMissileAbilityAI extends BaseAbilityAI {
+    @Override
+    public void advance(float days) {
+        super.advance(days);
+    }
+}
