@@ -120,6 +120,7 @@ Added - Missiles to most consumable item drop pools
 Added - Relic components will now drop from all automated ships that were destroyed (even modded)
 Added - Relic component configuration for RAT Abyss, KOL boss factions
 Adjusted - Relic components no longer drop from battles with the luddic path
+Adjusted - Drastically reduced prices of forge templates
 Adjusted - Removed most VPCs from Historian pool
 Adjusted - Conflict/Exploration Package VPCs moved from Historian T4 to Historian T3
 Adjusted - Drastically reduced drop rates for special items, again (now matches vanilla in my low-mod playthough)
